--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -16,6 +16,10 @@
           <ion-card-content>
             <ion-text color="secondary">{{loadedPlaces[0].description}}</ion-text>
           </ion-card-content>
+          <div class="ion-text-center">
+            <ion-button fill="clear" color="primary" routerDirection="forward"
+              [routerLink]="['/', 'places', 'tabs', 'discover', loadedPlaces[0].id]">More</ion-button>
+          </div>
         </ion-card>
       </ion-col>
     </ion-row>
@@ -23,12 +27,15 @@
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
         <ion-list>
-          <ion-item *ngFor="let place of loadedPlaces.slice(1)">
+          <ion-item *ngFor="let place of loadedPlaces.slice(1)"
+            [routerLink]="['/','places', 'tabs', 'discover', place.id]" detail>
             <ion-thumbnail slot="start">
               <ion-img [src]="place.imageUrl"></ion-img>
             </ion-thumbnail>
-            <ion-label><h2>{{place.title}}</h2>
-              <p>{{place.description}}</p></ion-label>
+            <ion-label>
+              <h2>{{place.title}}</h2>
+              <p>{{place.description}}</p>
+            </ion-label>
           </ion-item>
         </ion-list>
       </ion-col>
