passing data from modal

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <ion-app>
-  <ion-menu side="start" menuId="m1">
+  <ion-menu side="start" contentId=”main”>
     <!--menuId is optional here, along with `ion-menu-button menu="m1"`-->
     <ion-header>
       <ion-toolbar>
@@ -29,5 +29,5 @@
       </ion-list>
     </ion-content>
   </ion-menu>
-  <ion-router-outlet main></ion-router-outlet>
+  <ion-router-outlet id=”main”></ion-router-outlet>
 </ion-app>
