add swipable item to Edit option

--- a/src/app/places/offers/new-offer/new-offer.page.html
+++ b/src/app/places/offers/new-offer/new-offer.page.html
@@ -1,12 +1,18 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/places/tabs/offers"></ion-back-button>
+      <ion-back-button text="" defaultHref="/places/tabs/offers"></ion-back-button>
     </ion-buttons>
     <ion-title>New Offer</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-grid>
+    <ion-row class="ion-align-items-start">
+      <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
+        New Offers unavailable just now.
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
