--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -11,8 +11,8 @@
       <ion-input></ion-input>
     </ion-item>
   </ion-list>
-  <div class="ion-padding ion-text-center">
+  <!-- <div class="ion-padding ion-text-center">
     <ion-spinner color="primary" *ngIf="isLoading"></ion-spinner>
-  </div>
-  <ion-button color="primary" (click)="onLogin()" *ngIf="!isLoading">Login</ion-button>
+  </div> -->  
+  <ion-button class="ion-padding" color="primary" (click)="onLogin()" >Login</ion-button><!-- *ngIf="!isLoading" -->
 </ion-content>
