Add offer item and theme with CSS

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -70,6 +70,11 @@
   --ion-toolbar-color: var(--ion-color-tertiary-contrast, white);
 }
 
+ion-button {
+  --background : var(--ion-color-primary, black);
+  // --box-shadow: 2px 2px 20px rgba(0,0,0,0.6);
+}
+
 @media (prefers-color-scheme: dark) {
   /*
    * Dark Colors
